# nomad-training-navigator2

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.py  vocabulary.json  vocabulary_loader.py
data/context/: context.jsonld
data/metadata/: 20240417_guide_to_computational_metainfo.jsonld  20240417_guide_to_computational_schema_plugins.jsonld  20240417_h5mdnomad_a_flexible_datastorage_schema_for_uploading_molecular_simulations_to_nomad.jsonld  20240417_how_to_work_with_the_h5mdnomad_schema.jsonld  20240503_guide_to_computational_parser_plugins.jsonld  20240506_fairmat_users_meeting_fair_research_data_management_with_fairmat_and_nomad_ahmed_mansour.jsonld  20240603_standard_and_custom_computational_workflows_in_nomad.jsonld  20240620_domainspecific_examples_for_atom_probe_tomography_and_field_ion_microscopy.jsonld  20240620_domainspecific_examples_for_xray_photoelectron_spectroscopy.jsonld  20240624_quick_start_uploading_computational_data_in_nomad.jsonld  20241213_domainspecific_examples_for_sts_stm_scanning_tunneling_spectroscopy_microscopy.jsonld  20250501_standardized_ingestion_of_data_from_materials_characterization_using_nexus.jsonld  20250505_from_raw_data_files_to_published_datasets_ahmed_mansour.jsonld  20250505_introduction_to_nomad_public_service_and_its_main_functionalities_adrianna_wojas.jsonld  (+13 more)
models/: resource_metadata.py
services/: json_file_backend.py  metadata_manager.py  storage_interface.py
tests/: test_metadata_manager.py
ui/: main_app.py  search_and_explore.py  search_entries.py
utils/: helpers.py  logger.py
(+1 files in other folders)
