[tool.poetry]
name = "nomad-training-navigator2"
version = "0.1.0"
description = "A system for managing metadata of NOMAD training materials."
authors = ["Siamak N <placeholder_for_my_email@physik.hu-berlin.de>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7"
streamlit = "^1.34.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ruff = "^0.4.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
